style: fix no-scrollbar on firefox

--- a/src/styles/scrollbar.scss
+++ b/src/styles/scrollbar.scss
@@ -31,6 +31,12 @@
   /* Internet Explorer 10+ */
   scrollbar-width: none;
   /* Firefox */
+  & * {
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+    /* Firefox */
+  }
 
   &::-webkit-scrollbar,
   & ::-webkit-scrollbar {
